--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1 style="text-align:center;">Open the Console to See the Magic ✨! </h1>
-  <script src="./starter/assets/JS/script.js"></script>
+  <script src="starter/assets/JS/script.js"></script>
 </body>
 </html>
